[package]
name = "oprc-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

[features]
default = ["tracing"]
tracing = []
jaeger = ["dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

[lib]
name = "oprc_observability"
path = "src/lib.rs"
