[package]
name = "oprc-offload"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hashbrown = "0.15"
mobc = {workspace = true}
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = {workspace = true}
async-trait={workspace = true}
flume = {workspace = true}
oprc-pb = {workspace = true}
tonic = {workspace = true}
thiserror = {workspace = true}
http = {workspace = true}
scc = {workspace = true}
zenoh = {workspace = true}
prost ={ workspace = true, features = ["derive"] }