[package]
name = "oprc-pb"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = {workspace = true}
# prost-types = {workspace = true}
tonic = { workspace = true, features = ["server"] }
serde = { workspace = true, features = ["derive"], optional = true }
automerge = {workspace = true, optional = true}
serde_json = {workspace = true, optional = true}
bytes = { workspace = true, optional = true, features = ["serde"] }

[build-dependencies]
tonic-build = {  workspace = true, features = ["prost"] }

[package.metadata.cargo-machete]
ignored = ["prost", "serde"]

[features]
default = ["serde"]
serde = ["dep:serde"]
util = ["dep:automerge", "dep:serde_json"]
bytes = ["dep:bytes"]