[package]
name = "oprc-pb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
prost = { workspace = true}
tonic = { workspace = true}
tonic-prost = {workspace = true}
serde = { workspace = true, features = ["derive"], optional = true }

serde_json = {workspace = true, optional = true}
bytes = { workspace = true, optional = true, features = ["serde"] }

[build-dependencies]
tonic-prost-build = {  workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost", "serde"]

[features]
default = ["serde"]
serde = ["dep:serde"]
util = ["dep:serde_json"]
bytes = ["dep:bytes"]