[package]
name = "oprc-zenoh"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]

[dependencies]
async-trait = {workspace = true}
envconfig = {workspace = true}
zenoh-config={workspace = true, features = ["unstable"]}
zenoh = {workspace = true, features = []}
tokio = {workspace = true, features = ["macros"]}
tokio-util = {workspace = true}
flume = {workspace = true}
tracing = {workspace = true}