[package]
name = "oprc-zenoh"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]

[dependencies]
async-trait = {workspace = true}
envconfig = {workspace = true}
zenoh-config={workspace = true}
zenoh = {workspace = true, features = ["unstable", "internal"]}
tokio = {workspace = true, features = ["macros"]}
flume = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
rand = { workspace = true }