[package]
name = "oprc-zrpc"
description = "The RPC library on top of Zenoh with support for serialization library of choice."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["postcard"]
postcard = ["dep:postcard"]
prost = ["dep:prost"]
bitcode = ["dep:bitcode"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
async-trait = { workspace = true }
zenoh = { workspace = true, features = ["unstable"] }
serde = { workspace = true }
postcard = { workspace = true, optional = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
flume = { workspace = true }
anyerror = { workspace = true }
prost = { workspace = true, optional = true }
bitcode = { workspace = true, optional = true, features = ["serde"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
