[package]
name = "oprc-crm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pawissanutt/oaas-rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
envconfig = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
# Use workspace-provided tower and tower-http
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# workspace crates
oprc-grpc = { workspace = true }
oprc-models = { workspace = true }
oprc-observability = { workspace = true }
oprc-config = { workspace = true }

# k8s controller stack
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }

[features]
# Optional features to slim the binary in dev if needed
prom = []

[lib]
name = "oprc_crm"
path = "src/lib.rs"

[[bin]]
name = "oprc-crm"
path = "src/main.rs"

[dev-dependencies]
wiremock = { workspace = true }
serial_test = { workspace = true }
nanoid = "0.4"
test-log = { version = "0.2", features = ["trace"] }
