[package]
name = "oprc-crm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
envconfig = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
# Use workspace-provided tower and tower-http
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

# workspace crates
oprc-grpc = { workspace = true }

# workspace crates
oprc-models = { workspace = true }
oprc-observability = { workspace = true, features = ["otlp"] }

# TLS provider selection for rustls v0.23
# Ensure exactly one provider is enabled (aws-lc-rs via workspace).
rustls = { workspace = true }

# k8s controller stack
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = { workspace = true }

# Zenoh integration for Topology API
zenoh = { workspace = true }
oprc-zenoh = { workspace = true }
regex = { workspace = true }

[features]
# Optional features to slim the binary in dev if needed
prom = []

[dev-dependencies]
wiremock = { workspace = true }
serial_test = { workspace = true }
nanoid = { workspace = true }
test-log = { workspace = true }
oprc-test-utils = { workspace = true }
