[package]
name = "oprc-pm"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
oprc-models.workspace = true
oprc-cp-storage.workspace = true


oprc-grpc.workspace = true

# External dependencies
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true

envconfig.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]

serial_test.workspace = true


tonic.workspace = true
tokio-stream.workspace = true
oprc-test-utils.workspace = true
oprc-crm.workspace = true
test-log.workspace = true
kube.workspace = true