[package]
name = "oprc-pm"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Workspace dependencies
oprc-models.workspace = true
oprc-cp-storage.workspace = true
oprc-observability.workspace = true
oprc-grpc.workspace = true

# External dependencies
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true

envconfig.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nanoid.workspace = true
validator.workspace = true

[dev-dependencies]

serial_test.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
oprc-test-utils.workspace = true
oprc-crm.workspace = true
test-log.workspace = true
kube.workspace = true
testcontainers.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
# Empty feature flag to gate optional jaeger tracing support used in main.rs
default = ["etcd"]
jaeger = []
etcd = ["oprc-cp-storage/etcd"]
etcd-tls = ["oprc-cp-storage/etcd-tls"]
etcd-tests = [] # gates tests that launch real etcd containers
