[package]
name = "oprc-dev"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["zenoh"] 
zenoh = ["dep:oprc-zenoh", "dep:zenoh", "dep:oprc-invoke"]

[dependencies]
anyhow = {workspace = true}
clap = {workspace = true, features = ["derive"]}
oprc-grpc = { workspace = true , features = [  "util"]}
oprc-zenoh = {workspace = true, optional = true}
oprc-invoke = {workspace = true, optional = true}
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-stream = {workspace = true, features = ["sync"]}
tonic = { workspace=true }
tonic-reflection = { workspace=true }
dashmap = {workspace = true}
envconfig = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
num_cpus = {workspace = true}
rand = {workspace = true}
serde_json = {workspace = true}
serde ={ workspace = true , features = ["derive"]}
zenoh = {workspace = true, optional = true}

[[bin]]
name = "dev-echo-fn"

[[bin]]
name = "dev-random-fn"
required-features = ["zenoh"]

[[bin]]
name = "dev-num-log-fn"
required-features = ["zenoh"]
