[package]
name = "oprc-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = {workspace = true ,features = ["macros"]}
bytes = {workspace = true}
envconfig = {workspace = true}
http = {workspace = true}
oprc-invoke = { workspace = true }
oprc-grpc = { workspace = true }
oprc-zenoh = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = {workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true}
zenoh = {workspace = true}
prost = {workspace = true}
num_cpus = {workspace = true}
oprc-observability = { workspace = true }
tower-http = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
http-body-util = "0.1"