[package]
name = "oprc-odgm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = []

[dependencies]
async-trait={workspace = true}
byteorder = { workspace = true }
chrono = {workspace = true}
crossbeam-skiplist = { workspace = true }
# flare-dht = {workspace = true, features = ["raft"]}
flare-zrpc = {workspace = true}
oprc-pb = {workspace = true}
oprc-invoke = {workspace = true}
oprc-dp-storage = { workspace = true, features = ["memory", "fjall", "skiplist"] }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-stream = { workspace = true ,features = ["sync"]}
envconfig ={workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
automerge = {workspace = true}
# mur3 = {version = "0.1"}
tonic = {workspace = true}
tonic-reflection = {workspace = true}
serde = { workspace = true}
scc = {workspace = true}
prost = {workspace = true}
thiserror = {workspace = true}
merkle-search-tree = {workspace = true}
uuid = {workspace = true}
serde_json =  {workspace = true}
zenoh = {workspace = true}
oprc-zenoh = {workspace = true}
openraft ={ workspace = true, features = ["serde", "storage-v2"]}
bincode = {workspace = true}
tokio-util ={ workspace = true}
flume = {workspace = true}
rand =  {workspace = true}
num_cpus = {workspace = true}
nohash-hasher ={ workspace = true}

[dev-dependencies]
criterion = { workspace = true, features = ["async_futures", "async_tokio", "html_reports"] }
test-log = { workspace = true }

rand = {workspace = true}
tonic = {workspace = true}
tonic-reflection = {workspace = true}
serial_test = { workspace = true }

[[bench]]
name = "event_bench"
harness = false

[[bench]]
name = "kv_shard_write"
harness = false