[package]
name = "oprc-odgm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = []

[dependencies]
async-trait={workspace = true}
byteorder = { workspace = true }
chrono = {workspace = true}
crossbeam-skiplist = { workspace = true }
oprc-zrpc = {workspace = true}
oprc-invoke = {workspace = true}
oprc-grpc = {workspace = true, features = ["otel"]}
oprc-dp-storage = { workspace = true, features = ["memory", "fjall", "skiplist"] }
tokio = { workspace = true, features = ["macros", "signal", "rt-multi-thread"] }
tokio-stream = { workspace = true ,features = ["sync"]}
envconfig ={workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
automerge = {workspace = true}
futures = {workspace = true}
tonic = {workspace = true}
tonic-reflection = {workspace = true}
serde = { workspace = true}
scc = {workspace = true}
prost = {workspace = true}
thiserror = {workspace = true}
merkle-search-tree = {workspace = true}
tracing-opentelemetry  = {workspace = true}
opentelemetry = {workspace = true}
nanoid = {workspace = true}
serde_json =  {workspace = true}
zenoh = {workspace = true}
oprc-zenoh = {workspace = true}
oprc-observability = {workspace = true}
openraft ={ workspace = true, features = ["serde", "storage-v2"]}
bincode = {workspace = true}
tokio-util ={ workspace = true}
flume = {workspace = true}
rand =  {workspace = true}
num_cpus = {workspace = true}
nohash-hasher ={ workspace = true}
regex = { workspace = true }
lazy_static = { workspace = true }
once_cell = {workspace = true}

[dev-dependencies]
criterion = { workspace = true, features = ["async_futures", "async_tokio", "html_reports"] }
test-log = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }