[package]
name = "oprc-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASI Component Model runtime for OaaS WASM functions"

[dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
oprc-grpc = { workspace = true }
oprc-invoke = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wat = { workspace = true }
