[package]
name = "oprc-gui"
version.workspace = true
authors = ["Pawissanutt Lertpongrujikorn <pawissanutt@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OaaS-RS Console (CSR)"

[package.metadata]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true}
anyhow = { workspace = true }

# Types available everywhere (WASM and server)
oprc-grpc = { path = "../../commons/oprc-grpc", default-features = false, features = ["serde"] }
oprc-models = { workspace = true }

# Server-only dependencies (not compiled for WASM)
chrono = { workspace = true, optional = true }

# Will integrate zenoh later for topology (placeholder)
# zenoh = { workspace = true, optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server","dep:chrono", "oprc-grpc/grpc"]
# Future feature flags (placeholders):
topology = []
deployments = []
invocation = []
