[package]
name = "oprc-gui"
version.workspace = true
authors = ["Pawissanutt Lertpongrujikorn <pawissanutt@gmail.com>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OaaS-RS Console (CSR)"

[package.metadata]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { features = ["router", "web"] , workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { features = ["Window", "Document", "Location", "Storage", "Navigator", "Clipboard", "DomTokenList", "MediaQueryList", "Element", "HtmlElement"] , workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
gloo-timers = { features = ["futures"] , workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
serde_yaml = { workspace = true }

# Types available everywhere (WASM and server)
oprc-grpc = { default-features = false, features = ["serde"] , workspace = true }
oprc-models = { workspace = true }

# Server-only dependencies (removed for CSR)
chrono = { workspace = true }
once_cell = { workspace = true }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
# Future feature flags (placeholders):
topology = []
deployments = []
invocation = []
all = ["web", "desktop", "mobile", "server", "topology", "deployments", "invocation"]
fullstack = ["web", "server"]
