[package]
name = "system-e2e"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
duct = "1.1"
nanoid = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
oprc-models = { workspace = true }
envconfig = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
