[package]
name = "system-e2e"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
duct = { workspace = true }
nanoid = { workspace = true }
reqwest = { features = ["json"] , workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
oprc-models = { workspace = true }
envconfig = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
